--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,4 +1,10 @@
 body {
+    background: red;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
+}
+
+label {
+    display: block;
+    margin-bottom: 1em;
 }
